--- a/style.css
+++ b/style.css
@@ -24,8 +24,8 @@ h1{
     width: 20px;
     position: absolute;
     background: #ffc107;
-    left: 190px;
-    top: 110px;
+    /* left: 190px;
+    top: 110px; */
     
 }
 #seed{
