--- a/style.css
+++ b/style.css
@@ -1,73 +1,59 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-h1{
-    font-size: 2.7em;
-    font-family: sans-serif;
+
+
+body {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
-}
-#border{
-    box-shadow: 6px 10px 56px 10px #333333bf;
-    border: 4px solid #0000;
-    width: 1000px;
-    height: 400px;
-    margin: auto;
-    border-radius: 9px;
-    background: #3e3e3e;
-    margin-top: 50px;
-}
-#snake , #seed{
-    height: 20px;
-    width: 20px;
-    position: absolute;
-    background: #ffc107;
-    /* left: 190px;
-    top: 110px; */
-    
-}
-#seed{
-    background-color: red;
-}
-button{
-    
-    box-shadow: 1px 1px 20px #232222;
-    border-radius: 10px;
-    height: 50px;
-    width: 310px;
-    border: none;
-    position: absolute;
-    top: 320px;
-    font-size: 2em;
-    left: 520px;
+    height: 100vh;
     background: #333;
+    margin: 0;
+    font-family: 'Arial', sans-serif;
     color: #fff;
-    cursor: pointer;
 }
-h2{
-    left: 210px;
-    bottom: 81px;
-    position: absolute;
-    font-size: 2em;
-    font-family: sans-serif;
+canvas {
+    border: 5px solid #333;
+    border-radius: 1em;
+    width: 50em;
+    height: 40em;
+    box-shadow: 0 0 10px rgb(0, 0, 0);
+    background-color: #fff;
 }
-h2#high_score{
-    bottom: 20px;
+.game-info {
+    font-size: 1.5rem;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 10px;
 }
-#massage{
-    
-    width: 680px;
-    height: 90px;
-    background: #f31100;
-    position: absolute;
-    left: 360px;
-    top: -90px;
-    border-radius: 0px 0px 10px 10px;
-    font-size: 2em;
-    font-family: sans-serif;
-    text-align: center;
-    bottom: -90px;
-    transition: all 1.4s;
+.game-buttons {
+    display: flex;
+    gap: 10px;
 }
+
+
+.game-buttons button:disabled {
+    background-color: gray;
+    cursor: not-allowed;
+}
+
+button {
+    font-size: 17px;
+    margin-top: 3em;
+    padding: 0.5em 2em;
+    border: transparent;
+    box-shadow: 2px 2px 4px rgba(0,0,0,0.4);
+    background: dodgerblue;
+    color: white;
+    border-radius: 4px;
+   }
+   
+   button:hover {
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(30,144,255,1) 0%, rgba(0,212,255,1) 100%);
+   }
+   
+   button:active {
+    transform: translate(0em, 0.2em);
+   }
